Update full template.

--- a/templates/ballot/web_full_list.html
+++ b/templates/ballot/web_full_list.html
@@ -2,7 +2,7 @@
 {% load cache %}
 {% load humanize %}
 
-{% block head_title %}Unofficial Lane County results for the May 19, 2015, special election {% endblock %}
+{% block head_title %}Unofficial Lane County results for the May 17, 2016, primary election {% endblock %}
 
 {% block css %}
 <style type="text/css">
@@ -23,9 +23,9 @@
 </div> <!-- /.c49p -->
 {% endblock %}
 
-{% block home %}: Election 2015{% endblock %}
+{% block home %}: Election 2016{% endblock %}
 
-{% block headline %}Unofficial Lane County results for the May 19, 2015, special election{% endblock %}
+{% block headline %}Unofficial Lane County results for the May 17, 2016, primary election{% endblock %}
 
 {% block secondary_column %}{% endblock secondary_column %}
 
@@ -46,7 +46,7 @@
 		{% endcomment %}
 
 			<h3 class="label">Elections</h3>
-<h1 class="h3">Unofficial final results for the Lane County May 19, 2015, special election</h1>
+<h1 class="h3">Unofficial final results for the Lane County May 17, 2016, primary election</h1>
 			<div class="rack">
 
 				<div id="election-table">
