Not unofficial "final" results.;

--- a/templates/ballot/web_full_list.html
+++ b/templates/ballot/web_full_list.html
@@ -46,7 +46,7 @@
 		{% endcomment %}
 
 			<h3 class="label">Elections</h3>
-<h1 class="h3">Unofficial final results for the Lane County May 17, 2016, primary election</h1>
+<h1 class="h3">Unofficial results for the Lane County May 17, 2016, primary election</h1>
 			<div class="rack">
 
 				<div id="election-table">
