--- a/templates/ballot/maps.html
+++ b/templates/ballot/maps.html
@@ -2,15 +2,21 @@
 
 {# Some turnout numbers here: http://oregonvotes.org/results/2016P/1577763306.html #}
 
+{% block head_title %}Oregon voter turnout by county for the May 17, 2016, primary{% endblock head_title %}
+
 {% block head_extra %}
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 <style>
 		#map {
-			width: 980px;
-			height: 670px;
+			width: 100%;
+			height: 420px;
 		}
 
-		.info {
+		#pop_map {
+			width: 100%;
+			height: 420px;
+		}
+		.info, .pop_info {
 			padding: 6px 8px;
 			font: 14px/16px Arial, Helvetica, sans-serif;
 			background: white;
@@ -18,7 +24,7 @@
 			box-shadow: 0 0 15px rgba(0,0,0,0.2);
 			border-radius: 5px;
 		}
-		.info h4 {
+		.info h4, .pop_info h4 {
 			margin: 0 0 5px;
 			color: #777;
 		}
@@ -35,31 +41,77 @@
 			margin-right: 8px;
 			opacity: 0.7;
 		}
+
+		/*
+		To counter bulldog img max-height: 100%, which hides background tile
+		map.
+		*/
+		.leaflet-container img {
+			max-height: none;
+		}
 	</style>
 {% endblock head_extra %}
 
-{% block content %}
-<div id="map"></div>
-{% endblock content %}
+{% block body %}
+
+<div class="w_row">
+	
+	<div class="w_col w_C130">&nbsp;</div>
+	
+	<div class="w_col w_C300 w_D470">
+		
+		<div id="bd_content">
+			
+			<div class="section">
+				
+				<article>
+
+					<div id="map"></div>
+
+				</article>
+				
+			</div> <!-- /.section -->
+			
+		</div> <!-- /#story -->
+		
+	</div> <!-- /.w_col -->
+	
+	<div class="w_col w_C300 w_D470">
+		
+		<div id="bd_content">
+			
+			<div class="section">
+				
+				<article>
+					
+					<div id="pop_map"></div>
+					
+				</article>
+				
+			</div> <!-- /.section -->
+			
+		</div> <!-- /#story -->
+		
+	</div> <!-- /.w_col -->
+	
+	<div class="w_col w_C130">&nbsp;</div>
+	
+</div> <!-- /.w_row -->
+
+{% endblock body %}
 
 {% block footer_extra %}
 <script src="http://static.registerguard.com/ballot/js/oregon_counties.json"></script>
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 <script>
-	var map = L.map('map').setView([44.455271, -120.674006], 7);
+	var map = L.map('map').setView([44.455271, -120.674006], 6);
 	var mapboxAccessToken = 'pk.eyJ1IjoiamhlYXNseSIsImEiOiJxQ1hKZmlBIn0.FogeUXv7HHl_CjgfL0aP2A';
 
 	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=' + mapboxAccessToken, {
 		maxZoom: 18,
 		id: 'mapbox.light',
-		attribution: 'John Heasly!'
+		attribution: 'John Heasly'
 	}).addTo(map);
-
-	// var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
-	// 	maxZoom: 18,
-	// 	subdomains: ['otile1','otile2','otile3','otile4']
-	// });
-	// map.addLayer(mapquestLayer);
 
 	// control that shows state info on hover
 	var info = L.control();
@@ -72,7 +124,7 @@
 	
 	info.update = function (props) {
 		this._div.innerHTML = '<h4>Voter turnout</h4>' + ( props ?
-			'<b>' + props.name + '</b><br />' + props.turnout + ' %'
+			'<b>' + props.name + '</b><br />' + props.turnout + '%'
 			: 'Hover over a county');
 	};
 	
@@ -80,14 +132,14 @@
 	
 	// get color depending on population density value
 	function getColor(d) {
-		return d > 70 ? '#800026' :
-		       d > 65  ? '#BD0026' :
-		       d > 60  ? '#E31A1C' :
-		       d > 55  ? '#FC4E2A' :
-		       d > 50   ? '#FD8D3C' :
-		       d > 45   ? '#FEB24C' :
-		       d > 40   ? '#FED976' :
-		                  '#FFEDA0';
+		return d > 70 ? '#005A32' :
+		       d > 65  ? '#238443' :
+		       d > 60  ? '#41AB5D' :
+		       d > 55  ? '#78C679' :
+		       d > 50   ? '#ADDD8E' :
+		       d > 45   ? '#D9F0A3' :
+		       d > 40   ? '#F7FCB9' :
+		                  '#FFFFE5';
 	};
 	
 	function style(feature) {
@@ -118,8 +170,6 @@
 		info.update(layer.feature.properties);
 	};
 	
-	var geojson;
-	
 	function resetHighlight(e) {
 		geojson.resetStyle(e.target);
 		info.update();
@@ -137,11 +187,106 @@
 		});
 	}
 	
+	var geojson;
+	
 	geojson = L.geoJson(oregonCounties, {
 		style: style,
 		onEachFeature: onEachFeature
 	}).addTo(map);
 	
-	map.attributionControl.addAttribution('Population data &copy; <a href="http://census.gov/">US Census Bureau</a>');
+	map.attributionControl.addAttribution('Voter data; <a href="http://sos.oregon.gov/voting-elections/Pages/default.aspx">Oregon Secretary of State</a>');
+</script>
+
+<script>
+	// map on the right
+	var pop_map = L.map('pop_map').setView([44.455271, -120.674006], 6);
+
+	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=' + mapboxAccessToken, {
+		maxZoom: 18,
+		id: 'mapbox.light',
+		attribution: 'John Heasly'
+	}).addTo(pop_map);
+
+	// control that shows state info on hover
+	var pop_info = L.control();
+	
+	pop_info.onAdd = function (pop_map) {
+		this._div = L.DomUtil.create('div', 'pop_info');
+		this.update();
+		return this._div;
+	};
+	
+	pop_info.update = function (props) {
+		this._div.innerHTML = '<h4>Eligible voters</h4>' + ( props ?
+			'<b>' + props.name + '</b><br />' + props.eligible_voters
+			: 'Hover over a county');
+	};
+	
+	pop_info.addTo(pop_map);
+	
+	// get color depending on population density value
+	function popGetColor(d) {
+		return d > 300000 ? '#005A32' :
+		       d > 240000  ? '#238443' :
+		       d > 180000  ? '#41AB5D' :
+		       d > 120000  ? '#78C679' :
+		       d > 60000   ? '#ADDD8E' :
+		       d > 30000   ? '#D9F0A3' :
+		       d > 100   ? '#F7FCB9' :
+		                  '#FFFFE5';
+	};
+	
+	function popStyle(feature) {
+		return {
+			weight: 2,
+			opacity: 1,
+			color: 'white',
+			dashArray: '3',
+			fillOpacity: 0.7,
+			fillColor: popGetColor(feature.properties.turnout)
+		};
+	};
+	function popHighlightFeature(e) {
+		var layer = e.target;
+	
+		layer.setStyle({
+			weight: 5,
+			color: '#666',
+			dashArray: '',
+			fillOpacity: 0.6
+		});
+	
+		if (!L.Browser.ie && !L.Browser.opera) {
+			layer.bringToFront();
+		}
+	
+		pop_info.update(layer.feature.properties);
+	};
+	
+	function popResetHighlight(e) {
+		popgeojson.resetStyle(e.target);
+		pop_info.update();
+	}
+	
+	function popZoomToFeature(e) {
+		map.fitBounds(e.target.getBounds());
+	}
+	
+	function popOnEachFeature(feature, layer) {
+		layer.on({
+			mouseover: popHighlightFeature,
+			mouseout: popResetHighlight,
+			click: popZoomToFeature
+		});
+	}
+	
+	var popgeojson;
+	
+	popgeojson = L.geoJson(oregonCounties, {
+		style: style,
+		popOnEachFeature: popOnEachFeature
+	}).addTo(pop_map);
+	
+	pop_map.attributionControl.addAttribution('Voter data; <a href="http://sos.oregon.gov/voting-elections/Pages/default.aspx">Oregon Secretary of State</a>');
 </script>
 {% endblock footer_extra %}
