Added explainer_text to Lane County
(vote for 2)-type stuff.

--- a/templates/ballot/main_list.html
+++ b/templates/ballot/main_list.html
@@ -12,6 +12,7 @@
 {% endfor %}{% endfor %}{% endif %}<ParaStyle:StandingHeads\:Style\_8\_ReverseBar\_Inline><pTabRuler:131\,Right\,.\,0\,.\;216\,Right\,.\,0\,.\;253\,Right\,.\,0\,\;>LANE COUNTY
 {% if lane_county %}{% for race in lane_county %}{% ifchanged race.contest_wrapper.name %}<ParaStyle:QuickFacts\:News\_Elect\_blackCondheader><pTabRuler:131\,Right\,.\,0\,.\;216\,Right\,.\,0\,.\;253\,Right\,.\,0\,\;>{{ race.contest_wrapper.name|upper }}
 {% endifchanged %}{% if race.name %}<ParaStyle:QuickFacts\:News\_Elect\_blackCondheader><pTabRuler:131\,Right\,.\,0\,.\;216\,Right\,.\,0\,.\;253\,Right\,.\,0\,\;>{{ race.name }}
+{% endif %}{% if race.explainer_text %}<ParaStyle:QuickFacts\:News\_Elect\_text>{{ race.explainer_text }}
 {% endif %}{% for candidate in race.exclude_odd_bits %}<ParaStyle:QuickFacts\:News\_Elect\_text>{{ candidate.name }}	{{ candidate.votes_local|intcomma }}
 {% endfor %}{% endfor %}{% endif %}<ParaStyle:StandingHeads\:Style\_8\_ReverseBar\_Inline><pTabRuler:131\,Right\,.\,0\,.\;216\,Right\,.\,0\,.\;253\,Right\,.\,0\,\;>MEASURES
 {% if measures %}{% for race in measures %}{% ifchanged race.contest_wrapper.name %}<ParaStyle:QuickFacts\:News\_Elect\_blackCondheader><pTabRuler:131\,Right\,.\,0\,.\;216\,Right\,.\,0\,.\;253\,Right\,.\,0\,\;>{{ race.contest_wrapper.name|upper }}
