Web refer on main print page.

--- a/templates/ballot/main_list.html
+++ b/templates/ballot/main_list.html
@@ -31,4 +31,4 @@
 {% endifchanged %}{% if race.name %}<ParaStyle:QuickFacts\:News\_Elect\_blackCondheader><pTabRuler:131\,Right\,.\,0\,.\;216\,Right\,.\,0\,.\;253\,Right\,.\,0\,\;>{{ race.name }}
 {% endif %}{% for candidate in race.exclude_odd_bits %}<ParaStyle:QuickFacts\:News\_Elect\_text>{{ candidate.name }}	{{ candidate.votes_local|intcomma }}
 {% endfor %}{% endfor %}{% endif %}
-{% endautoescape %}
+{% endautoescape %}<ParaStyle:QuickFacts\:News\_Elect\_text>For the latest updated results, visit registerguard.com.
