--- a/templates/ballot/ghm_raw.html
+++ b/templates/ballot/ghm_raw.html
@@ -1,17 +1,17 @@
 {% load humanize %}
 {% for contest in object_list %}
-    {% ifchanged contest.region.name %}{{ contest.region.name }}{% endifchanged %}
-    {% ifchanged contest.contest_wrapper %}{{ contest.contest_wrapper }}{% endifchanged %}
-    {{ contest.name }}
+    {% ifchanged contest.region.name %}<b>{{ contest.region.name }}</b>{% endifchanged %}
+    {% ifchanged contest.contest_wrapper %}<b>{{ contest.contest_wrapper }}</b>{% endifchanged %}{% if contest.name %}
+    <b>{{ contest.name }}</b>{% endif %}
     {% for candidate in contest.cand_yes_no_set.all %}{% ifnotequal 'Write-in' candidate.name %}
         {{ candidate.name }}	{{ candidate.votes_local|intcomma }}	{{ candidate.local_percent }}%
     {% endifnotequal %}{% endfor %}
 {% endfor %}
-MEASURES
+<b>MEASURES</b>
 {% for measure in measures_list %}
-    {% ifchanged measure.region.name %}{{ measure.region.name }}{% endifchanged %}
-    {% ifchanged measure.contest_wrapper %}{{ measure.contest_wrapper }}{% endifchanged %}
-    {{ measure.name }}
+    {% ifchanged measure.region.name %}<b>{{ measure.region.name }}</b>{% endifchanged %}
+    {% ifchanged measure.contest_wrapper %}<b>{{ measure.contest_wrapper }}</b>{% endifchanged %}
+    <b>{{ measure.name }}</b>
     {% for side in measure.cand_yes_no_set.all %}
         {{ side.name }}	{{ side.votes_local|intcomma }}	{{ side.local_percent }}%
     {% endfor %}
