More print template cleanup.;

--- a/templates/ballot/ghm_raw.html
+++ b/templates/ballot/ghm_raw.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 {% for contest in object_list %}
     {% ifchanged contest.region.name %}<b>{{ contest.region.name }}</b><br>{% endifchanged %}
-    {% ifchanged contest.contest_wrapper %}<b>{{ contest.contest_wrapper }}</b><br>{% endifchanged %}{% if contest.name %}
+    {% ifchanged contest.contest_wrapper %}<b>{{ contest.contest_wrapper|upper }}</b><br>{% endifchanged %}{% if contest.name %}
     <b>{{ contest.name }}</b><br>{% endif %}
     {% for candidate in contest.cand_yes_no_set.all %}{% ifnotequal 'Write-in' candidate.name %}
         {{ candidate.name }}{% if candidate.affiliation %} ({{ candidate.affiliation }}){% endif %};{{ candidate.votes_local|intcomma }};{{ candidate.local_percent }}%<br>
@@ -10,9 +10,9 @@
 <b>MEASURES</b><br>
 {% for measure in measures_list %}
     {% ifchanged measure.region.name %}<b>{{ measure.region.name }}</b><br>{% endifchanged %}
-    {% ifchanged measure.contest_wrapper %}<b>{{ measure.contest_wrapper }}</b><br>{% endifchanged %}
-    <b>{{ measure.name }}</b><br>
+    {% ifchanged measure.contest_wrapper %}<b>{{ measure.contest_wrapper|upper }}</b><br>{% endifchanged %}{% if measure.name %}
+    <b>{{ measure.name }}</b><br>{% endif %}
     {% for side in measure.cand_yes_no_set.all %}
-        {{ side.name }}	{{ side.votes_local|intcomma }}	{{ side.local_percent }}%<br>
+        {{ side.name }};{{ side.votes_local|intcomma }};{{ side.local_percent }}%<br>
     {% endfor %}
 {% endfor %}
