Further fine tuning.

--- a/templates/ballot/ghm_raw.html
+++ b/templates/ballot/ghm_raw.html
@@ -10,8 +10,9 @@
 <b>MEASURES</b><br>
 {% for measure in measures_list %}
     {% ifchanged measure.region.name %}<b>{{ measure.region.name }}</b><br>{% endifchanged %}
-    {% ifchanged measure.contest_wrapper %}<b>{{ measure.contest_wrapper|upper }}</b><br>{% endifchanged %}{% if measure.name %}
+    {# {% ifchanged measure.contest_wrapper %}<b>{{ measure.contest_wrapper|upper }}</b><br>{% endifchanged %} #} {% if measure.name %}
     <b>{{ measure.name }}</b><br>{% endif %}
+    <b>{{ measure.explainer_text }}</b><br>
     {% for side in measure.cand_yes_no_set.all %}
         {{ side.name }};{{ side.votes_local|intcomma }};{{ side.local_percent }}%<br>
     {% endfor %}
