Tweaks to the quickfacts iframe template.

--- a/templates/ballot/web_list_gh.html
+++ b/templates/ballot/web_list_gh.html
@@ -12,6 +12,10 @@
 				margin: 0;
 				padding: 0;
 			}
+			h3.headline, p {
+				margin-top: 0;
+				margin-bottom: 0;
+			}
 		</style>
 
 	</head>
@@ -35,7 +39,7 @@
 			</p>
 		{% endif %}
 	{% endfor %}
-	<p><a href="http://projects.registerguard.com/ballot/results/full/" title="Complete local results">Other Lane County results &raquo;</a></p>
+	<p><a href="http://projects.registerguard.com/ballot/results/full/" title="Complete local results">Full Lane County results &raquo;</a></p>
 {% endif %}
 	</body>
 </html>
