Further fact box iframe tweaks

--- a/templates/ballot/web_list_gh.html
+++ b/templates/ballot/web_list_gh.html
@@ -12,9 +12,11 @@
 				margin: 0;
 				padding: 0;
 			}
-			h3.headline, p {
-				margin-top: 0;
+			h3.headline {
 				margin-bottom: 0;
+			}
+			p {
+				margin-top: 0;
 			}
 		</style>
 
